fixed width of header in Offer page on mobile devices

--- a/src/components/AboutMePage/Components/Title/_title.scss
+++ b/src/components/AboutMePage/Components/Title/_title.scss
@@ -14,5 +14,9 @@
         width: 70rem;
         display: block;
         margin: 5rem auto;
+
+        @include mobileXL {
+            width: $container-width-mobile;
+        }
     }
 }
